# seniorThesisRepo

./: .gitignore  README.md  checkins.md
ESP32BluetoothDemo2/: ContentView.swift  NotificationManager.swift
ESP32BluetoothDemo2.xcodeproj/: project.pbxproj
ESP32BluetoothDemo2.xcodeproj/project.xcworkspace/xcuserdata/ethanw.xcuserdatad/: UserInterfaceState.xcuserstate
code/Arduino Sketches/BluetoothConnectToIOSApp/: BluetoothConnectToIOSApp.ino
code/Arduino Sketches/esp32_master/: esp32_master.ino
code/Arduino Sketches/esp32_slave/: esp32_slave.ino
code/CentralDevice/: sdkconfig
code/CentralDevice/main/: CMakeLists.txt  index.html  main.c
code/IOSApp/ESP32BluetoothDemo2/: BluetoothManager.swift  ESP32BluetoothDemo2App.swift  TipUpAlert.swift
code/IOSApp/ESP32BluetoothDemo2.xcodeproj/xcuserdata/ethanw.xcuserdatad/xcschemes/: xcschememanagement.plist
code/TipUpNode/: .clangd  sdkconfig
code/TipUpNode/main/: CMakeLists.txt  espnow_example.h  main.c
